Fix notices spacing

--- a/assets/home/notices.scss
+++ b/assets/home/notices.scss
@@ -1,12 +1,15 @@
 
 .sensei-home {
 	&__notices {
-		margin-bottom: 31px;
+		margin-bottom: 20px;
 
 		.sensei-notice {
-			margin-left: 0;
-			margin-right: 0;
+			margin: 0 0 12px;
 			padding: 10px 16px;
+
+			&:last-child {
+				margin-bottom: 0;
+			}
 
 			&__wrapper {
 				height: 100%;
